--- a/css/home.css
+++ b/css/home.css
@@ -1,15 +1,22 @@
 body {
-    background-color: #222;
+    background-color: #00000077;
     color: white;
+    backdrop-filter: blur(20px);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     padding: 0px;
+    width:100%;
+    height:100%;
+    margin:0px;
 }
 
-html,
-body {
+html {
+    width: 100%;
     height: 100%;
-    user-select: none;
     margin: 0px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url("../img/wallpaper.png");
 }
 
 img.logo {
