--- a/css/page.css
+++ b/css/page.css
@@ -1,16 +1,24 @@
 body {
-    background-color: #222;
+    background-color: #00000077;
     color: white;
+    backdrop-filter: blur(20px);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     padding: 0px;
-    margin: 0px;
+    width:100%;
+    height:100%;
+    margin:0px;
 }
 
-html,
-body {
+html {
+    width: 100%;
     height: 100%;
-    user-select: none;
+    margin: 0px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url("../img/wallpaper.png");
 }
+
 
 div.headerBar {
     width: calc(100% - 40px);
@@ -115,7 +123,7 @@ div.pageContent {
 button.projectDisplay {
     width: 200px;
     height: 175px;
-    background-color: #333;
+    background-color: #00000033;
     color: white;
     border-radius: 5px;
     text-align: left;
