--- a/css/phone.css
+++ b/css/phone.css
@@ -1,3 +1,17 @@
-.centered div.linkPane {
-    padding-top: 60px;
+.header {
+    font-size: 1.8em;
+}
+
+.sub-header {
+    font-size: 1em;
+    margin-top: 80px;
+    margin: 98px 5px;
+}
+
+.header-bar {
+    text-align: center;
+}
+
+.header-bar-button-descr {
+    display:none;
 }
